Bug 117007 - Elementary not appearing on gtk2 and gtk3 backends
Summary: Elementary not appearing on gtk2 and gtk3 backends
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected
Depends on:
Blocks: Icon-Themes-Code
  Show dependency treegraph
 
Reported: 2018-04-14 13:27 UTC by Yousuf Philips (jay) (retired)
Modified: 2020-06-03 13:06 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2018-04-14 13:27:16 UTC
As colibre is supposed to be the default only on windows, i'm not sure why i'm seeing it as the default on linux when i run either in gtk2 or gtk3 modes.

Linux Mint 18.3 Mate

Version: 6.1.0.0.alpha0+
Build ID: 066ad8cfcdf570c0d14f3de379adfa6c3c196518
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 1 Xavier Van Wijmeersch 2018-04-14 13:42:32 UTC
On my system Slackware64 current its not the default

Version: 6.1.0.0.alpha0+
Build ID: 9c8a6a4396ebbe8ecb15591cc291c388c82c8ed6
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: gtk3; 
Locale: nl-BE (en_US.UTF-8); Calc: group 
build 14/04/2018
Comment 2 Jean-Baptiste Faure 2018-04-14 19:50:30 UTC
(In reply to Yousuf Philips (jay) (retired) from comment #0)
> As colibre is supposed to be the default only on windows, i'm not sure why
> i'm seeing it as the default on linux when i run either in gtk2 or gtk3
> modes.

I see it as the default on my own built of the master under Ubuntu 16.04.
That said, I think Colibre should be the default on Linux too.

Best regards. JBF
Comment 3 Jean-Baptiste Faure 2018-04-14 19:54:48 UTC
Confirmed on Ubuntu.

Best regards. JBF
Comment 4 Heiko Tietze 2018-04-14 20:33:24 UTC
Potential patch in https://gerrit.libreoffice.org/#/c/52880/. Please test it as I don't know if your systems report gtk2/gtk3 instead of gnome, which actually was working for some people.
Comment 5 Xisco Faulí 2018-04-17 13:13:00 UTC
On linux mint, I have Elementary after 

author	heiko tietze <tietze.heiko@gmail.com>	2018-03-29 17:39:35 +0200
committer	Heiko Tietze <tietze.heiko@gmail.com>	2018-04-04 20:49:30 +0200
commit 803a3539975059d2fde5b0eab3e0850ba155368a (patch)
tree f4d20bc294be12d46d3fdde2f444e9921a5e7cc3
parent 599ff05300599d4e4ce818092f18e76e738b921e (diff)
tdf#116695 Make Elementary the default on Gnome
IconThemeSelector updated; tde and kde(3) removed
Comment 6 Xisco Faulí 2018-04-17 13:13:57 UTC
with cinnamon 3.6.7
Comment 7 Commit Notification 2018-05-06 10:12:14 UTC
heiko tietze committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=411162f2d12affc6a1109022b185c7060f12bd4f

tdf#117007 - Elementary not appearing on some backends

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.