tdf#117007 - Elementary not appearing on some backends

unity & mate added in iconthemeselector

Change-Id: I9a10af148b405068726645940d482c89962fec5c